force-app/main/default/objects/Property_Management__c.object
<CustomObject>
    <fields>
        <fullName>Stewardship_Costs__c</fullName>
        <inlineHelpText>Describe the strategies, parties and costs involved in sustaining the conservation targets under TNC management and beyond.</inlineHelpText>
        <label>Stewardship Costs</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stewardship_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added 3/3/17 to capture the regional stewardship manager. Should copy over from Deal record.</description>
        <inlineHelpText>Select the name of the regional stewardship manager if there is one for this property interest group.</inlineHelpText>
        <label>Stewardship Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Management5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stewardship_Management_Goals__c</fullName>
        <inlineHelpText>Describe the overall stewardship management goals; including identification of permitted activities and actions necessary to achieve the goals on the property.</inlineHelpText>
        <label>Stewardship Management Goals</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stewardship_Management_Plan__c</fullName>
        <description>Agreed with Mike McFadden and Lynn Lozier that this field is not helpful and actually misleading.</description>
        <label>XDeprecate_Stewardship Management Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Plan Produced</fullName>
                </value>
                <value>
                    <fullName>Plan Produced</fullName>
                </value>
                <value>
                    <fullName>Plan Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_to_Williamson_Act__c</fullName>
        <description>Moved to Property Interest - The Williamson Act of the US state of California (officially, the California Land Conservation Act of 1965) is a California law that provides relief of property tax to owners of farmland and open-space land in exchange for a ten-year agreement that the land will not be developed or otherwise converted to another use.</description>
        <inlineHelpText>Is all or any portion of the property under a Williamson Act contract?  If yes, please attach a copy of the contract to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>XDeprecate_Subject to Williamson Act?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TNC_Interest_Book_Value__c</fullName>
        <description>Replaced with roll up summary from property interests.</description>
        <inlineHelpText>TNC interest book value is based on the original cost of the asset less any depreciation, amortization or impairment costs made against the asset.  The value is recorded in the Conservation Land Management (CLS) database.</inlineHelpText>
        <label>XDeprecate_TNC Interest Book Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TNC_Interest_in_ConservationTrack__c</fullName>
        <inlineHelpText>Please enter the url of the ConservationTrack property record by cutting and pasting the url address to this field.</inlineHelpText>
        <label>TNC Interest in ConservationTrack</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Take_Out_Strategy_Description__c</fullName>
        <description>Moved to Property Interest</description>
        <label>XDeprecate_Take-Out Strategy Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Take_Out_Strategy_Status__c</fullName>
        <description>Refer to deal record for this information</description>
        <label>XDeprecate_Take-Out Strategy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Contact</fullName>
                </value>
                <value>
                    <fullName>In Negotiation</fullName>
                </value>
                <value>
                    <fullName>Signed Agreement</fullName>
                </value>
                <value>
                    <fullName>Due Diligence Complete</fullName>
                </value>
                <value>
                    <fullName>Sale/Transfer Complete</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Take_Out_Strategy__c</fullName>
        <description>Moved to Property Interest</description>
        <label>XDeprecate_Take-Out Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TNC Holding Short Term</fullName>
                </value>
                <value>
                    <fullName>TNC Holding Long Term</fullName>
                </value>
                <value>
                    <fullName>Transferring to Local Land Trust</fullName>
                </value>
                <value>
                    <fullName>Transferring to Local Agency</fullName>
                </value>
                <value>
                    <fullName>Transferring to State Agency</fullName>
                </value>
                <value>
                    <fullName>Transferring to Federal Agency</fullName>
                </value>
                <value>
                    <fullName>Conservation Buyer Sale</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Policy_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the property&apos;s title policy is attached to the &quot;Notes and Attachments&quot; section.  If not, locate the property&apos;s policy report and attach it to the record.</inlineHelpText>
        <label>Title Policy Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Easement_Acres__c</fullName>
        <description>Total easement and deed restriction acreage associated with the property management unit</description>
        <inlineHelpText>Non-editable - The total acreage of all active easements and deed restrictions within this property management group.</inlineHelpText>
        <label>Total Easement Acres</label>
        <summarizedField>Property_Interest__c.Tract_Acres__c</summarizedField>
        <summaryFilterItems>
            <field>Property_Interest__c.Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Held Easement or Deed Restriction</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Property_Interest__c.Overlay__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fee_Acres__c</fullName>
        <description>Totals acreage on all related property interests that are owned in Fee</description>
        <inlineHelpText>Non-editable - The total acreage for all TNC owned fee interests within this property management unit.</inlineHelpText>
        <label>Total Fee Acres</label>
        <summarizedField>Property_Interest__c.Tract_Acres__c</summarizedField>
        <summaryFilterItems>
            <field>Property_Interest__c.Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Owned Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_PMU_Book_Value__c</fullName>
        <inlineHelpText>The total of the book value of all currently owned or held property interests.</inlineHelpText>
        <label>Total PMU Book Value</label>
        <summarizedField>Property_Interest__c.TNC_Interest_Book_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Property_Interest__c.Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Owned Fee, TNC Managed, TNC Held Easement or Deed Restriction, TNC Owned Rights</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_TNC_Interest_Acres__c</fullName>
        <description>Total of all acreage either owned in fee, TNC managed or covered in easements or deed restrictions.</description>
        <inlineHelpText>Total of all acreage either owned in fee, TNC managed or covered in easements or deed restrictions. Does not include any easements held by third party but monitored by TNC.</inlineHelpText>
        <label>Total TNC Interest Acres</label>
        <summarizedField>Property_Interest__c.Tract_Acres__c</summarizedField>
        <summaryFilterItems>
            <field>Property_Interest__c.Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Owned Fee, TNC Managed, TNC Held Easement or Deed Restriction</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Property_Interest__c.Overlay__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tract_Acres__c</fullName>
        <description>Replaced with roll up summaries from the property interests</description>
        <label>XDeprecate_Tract Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tract_Survey__c</fullName>
        <description>Moved to Interest level 4/11/17</description>
        <inlineHelpText>Does TNC have a survey of the property?  Please attach a copy of the survey to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>XDeprecate_Tract Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Lease_on_Property__c</fullName>
        <description>Refer to individual lease contracts</description>
        <inlineHelpText>Please attach a copy of the lease to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>XDeprecate_Type of Lease on Property</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Federal Grazing Allotment</fullName>
                </value>
                <value>
                    <fullName>Grazing</fullName>
                </value>
                <value>
                    <fullName>Horses</fullName>
                </value>
                <value>
                    <fullName>Hunting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>State Grazing Allotment</fullName>
                </value>
                <value>
                    <fullName>Tenants</fullName>
                </value>
                <value>
                    <fullName>Timber</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Report_Filed__c</fullName>
        <description>moved to water right object</description>
        <label>XDeprecate_Type of Report Filed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Report of Licensee</fullName>
                </value>
                <value>
                    <fullName>Statement of Diversion and Use</fullName>
                </value>
                <value>
                    <fullName>Groundwater Extraction Notice</fullName>
                </value>
                <value>
                    <fullName>Progress Report by Permittee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Monitoring_Photos__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/search/ui/UnifiedSearchResults?searchType=2&amp;sen=001&amp;sen=068&amp;sen=a0B&amp;sen=a0A&amp;sen=015&amp;sen=00T&amp;sen=005&amp;sen=00U&amp;sen=006&amp;sen=a05&amp;sen=a3Z&amp;str=#!/str=&quot;&amp;SUBSTITUTE(Name, &quot; &quot;, &quot;%20&quot;)&amp;&quot;&amp;initialViewMode=detail&amp;fen=a3Z&amp;collapse=1&quot;, &quot;Click Here&quot;, &quot;target=_blank&quot;)</formula>
        <inlineHelpText>Click this link to view all of the easement/deed restriction monitoring photos associated with this PMU.</inlineHelpText>
        <label>View Monitoring Photos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Right_Type__c</fullName>
        <description>Moved to water right object</description>
        <label>XDeprecate_Water Right Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjudicated</fullName>
                </value>
                <value>
                    <fullName>Licensed Appropriative</fullName>
                </value>
                <value>
                    <fullName>Groundwater</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Pre-1914 Appropriative</fullName>
                </value>
                <value>
                    <fullName>Riparian</fullName>
                </value>
                <value>
                    <fullName>Stockpond</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Rights_Description__c</fullName>
        <description>Moved to Water Right Object</description>
        <inlineHelpText>Please include a a detailed description on how the water right is or is not used on the property.</inlineHelpText>
        <label>XDeprecate_Water Rights Description</label>
        <length>1480</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Water_Rights_Fees__c</fullName>
        <description>Moved to water right object</description>
        <inlineHelpText>Are there any annual fees associated with the water rights license?</inlineHelpText>
        <label>XDeprecate_Water Rights Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Rights_Reporting_Requirements__c</fullName>
        <description>Moved to water right object</description>
        <inlineHelpText>Are there reporting requirements related to the type of water right?  If Yes, please attach copies of any licensee reports or other reports to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>XDeprecate_Water Rights Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Watershed__c</fullName>
        <description>Moved to water right object</description>
        <inlineHelpText>Please identify the watershed the water right relates to.</inlineHelpText>
        <label>XDeprecate_Watershed</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welfare_Exemption_Explanation__c</fullName>
        <description>Moved to property interest</description>
        <inlineHelpText>If TNC is not applying for an exemption, then explain why an application will not be submitted.</inlineHelpText>
        <label>XDeprecate_Welfare Exemption Explanation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_and_where_were_survey_s_conducted__c</fullName>
        <inlineHelpText>Read-Only - to update go to the property interest record for the tract where the survey was done. List of surveys, where and where they were conducted, and a reference to where the survey is located.</inlineHelpText>
        <label>When and where were survey&apos;s conducted?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Williamson_Act_Applied_For__c</fullName>
        <description>Moved to property interest.</description>
        <inlineHelpText>The Williamson Act of the US state of California (officially, the California Land Conservation Act of 1965) is a California law that provides relief of property tax to owners of farmland and open-space land in exchange for a ten-year agreement that the la</inlineHelpText>
        <label>XDeprecate_Williamson Act Applied</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Williamson_Act_Details__c</fullName>
        <description>The Williamson Act of the US state of California (officially, the California Land Conservation Act of 1965) is a California law that provides relief of property tax to owners of farmland and open-space land in exchange for a ten-year agreement that the land will not be developed or otherwise converted to another use.</description>
        <inlineHelpText>Please describe the terms of the Williamson Act contract, including permitted and compatible uses.  If TNC plans to put the property under a Williamson Act contract, attach a copy of the application to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>XDeprecate_Williamson Act Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1026A_Determination_for_the_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moved to property interest</description>
        <inlineHelpText>Does TNC have a 1026A from the FSA?  The 1026A is the Highly Erodible Land (HEL) and Wetlands determination form.  If “yes” show the determination in the text box below.  If “no” indicate the date the determination was requested.</inlineHelpText>
        <label>XDeprecate_1026A Determination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1026A_Information__c</fullName>
        <description>Moved to property interest</description>
        <inlineHelpText>A 1026A shows the determination from the local county FSA office as to whether or not the property includes highly erodible land or wetlands.  TNC must be in compliance with these determinations to receive any USDA program benefits.</inlineHelpText>
        <label>XDeprecate_1026A Determination Info</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XDeprecatAgricultural_Property_Statement__c</fullName>
        <inlineHelpText>Select the year(s) the annual filing(s) of the Agricultural Property Statement was completed and attach a copy(ies) of annual filing(s) to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>XDeprecatAgricultural Property Statement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Xdepdrecated_Farm_Bill_Program__c</fullName>
        <description>Not used on any records as of 8/5/16. Marked for deprecation rather delete to avoid losing picklist values.</description>
        <label>XDeprecated_Farm Bill Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Agricultural Management Assistance Program</fullName>
                </value>
                <value>
                    <fullName>Community Forest and Open Space Conservation Program (CFOSP)</fullName>
                </value>
                <value>
                    <fullName>Conservation Innovation Grants</fullName>
                </value>
                <value>
                    <fullName>Conservation of Private Grazing Land Program (CPGL)</fullName>
                </value>
                <value>
                    <fullName>Conservation Reserve Enhancement Program (CREP)</fullName>
                </value>
                <value>
                    <fullName>Conservation Reserve Program (CRP)</fullName>
                </value>
                <value>
                    <fullName>Conservation Security Program</fullName>
                </value>
                <value>
                    <fullName>Conservation Stewardship Program (CSP)</fullName>
                </value>
                <value>
                    <fullName>Continuous Conservation Reserve Program (CCRP)</fullName>
                </value>
                <value>
                    <fullName>Cooperative Conservation Partnership Initiative (CCPI)</fullName>
                </value>
                <value>
                    <fullName>Environmental Quality Incentives Program (EQIP)</fullName>
                </value>
                <value>
                    <fullName>Farm and Ranch Lands Protection Program</fullName>
                </value>
                <value>
                    <fullName>Grassland Reserve Program</fullName>
                </value>
                <value>
                    <fullName>Healthy Reserve Forest Program (HRFP)</fullName>
                </value>
                <value>
                    <fullName>Resource Conservation and Development Program (RC&amp;D)</fullName>
                </value>
                <value>
                    <fullName>Wetlands Reserve Program</fullName>
                </value>
                <value>
                    <fullName>Wildlife Habitat Incentives Program (WHIP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zoom_Level__c</fullName>
        <formula>IF(Distance__c &gt; 13, &quot;11&quot;,IF(Distance__c &gt; 5, &quot;12&quot;,IF(Distance__c &gt; 3, &quot;13&quot;,IF(Distance__c &gt; 2, &quot;14&quot;,IF(Distance__c &lt; 2, &quot;15&quot;, &quot;12&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zoom level when opening up the atlas. Calculated based on the distance formula.</inlineHelpText>
        <label>Zoom Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eWRIMS_Report_Management_Login__c</fullName>
        <inlineHelpText>Please enter the login name and password used to locate water reports filed through the State Water Resources Board eWRIMS Report Management system.</inlineHelpText>
        <label>XDeprecatedWRIMS Report Management Login</label>
        <type>TextArea</type>
    </fields>
    <label>Property Management</label>
    <listViews>
        <fullName>All_Property</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Conservation_Area__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Ecoregion__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Property</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_North_Coast</fullName>
        <columns>NAME</columns>
        <columns>Other_Identifying_Tract_Name__c</columns>
        <columns>CLS_Tract_Name__c</columns>
        <columns>County__c</columns>
        <columns>Related_Tract_Fee_Acquisition__c</columns>
        <columns>TNC_Interest_Book_Value__c</columns>
        <columns>Property_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ecoregion__c</field>
            <operation>equals</operation>
            <value>CA North Coast,CA Central Coast</value>
        </filters>
        <label>Central &amp; North Coast</label>
    </listViews>
    <listViews>
        <fullName>Chris_Basilevac_s_Properties</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>CLS_Tract_Name__c</columns>
        <columns>CLS_Site__c</columns>
        <columns>Ecoregion__c</columns>
        <columns>Date_Monitored_or_Inspected_By_TNC_Staff__c</columns>
        <columns>Ownership_Status__c</columns>
        <columns>Project_Director__c</columns>
        <columns>Property_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Basilevac</value>
        </filters>
        <filters>
            <field>Project_Director__c</field>
            <operation>contains</operation>
            <value>Basilevac</value>
        </filters>
        <filters>
            <field>Property_Manager__c</field>
            <operation>contains</operation>
            <value>Basilevac</value>
        </filters>
        <filters>
            <field>Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Owned Fee</value>
        </filters>
        <label>Chris Basilevac&apos;s Properties</label>
    </listViews>
    <listViews>
        <fullName>Cosumnes</fullName>
        <columns>NAME</columns>
        <columns>CLS_Site__c</columns>
        <columns>CLS_Tract_Name__c</columns>
        <columns>Water_Rights_Reporting_Requirements__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partners_Name__c</field>
            <operation>contains</operation>
            <value>Cosumnes</value>
        </filters>
        <label>Cosumnes</label>
    </listViews>
    <listViews>
        <fullName>Current_TNC_Fee_Interests_all_regions</fullName>
        <columns>NAME</columns>
        <columns>Ecoregion__c</columns>
        <columns>Project_Director__c</columns>
        <columns>Property_Manager__c</columns>
        <columns>Conservation_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>Current TNC Fee Interests (all regions)</label>
    </listViews>
    <listViews>
        <fullName>David_Edelson_s_Properties</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Director__c</field>
            <operation>contains</operation>
            <value>David Edelson</value>
        </filters>
        <filters>
            <field>Property_Manager__c</field>
            <operation>contains</operation>
            <value>David Edelson</value>
        </filters>
        <label>David Edelson&apos;s Properties</label>
        <sharedTo>
            <group>Sierra_Nevada</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fee_Active_Property_Management_Units</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Stewardship_Lead__c</columns>
        <columns>Conservation_Area__c</columns>
        <columns>Ecoregion__c</columns>
        <columns>Total_Fee_Acres__c</columns>
        <columns>Total_PMU_Book_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Management__c.Fee</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Fee (Active) Property Management Units</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fee_Properties_for_Annual_Inspection</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>CLS_Tract_Name__c</columns>
        <columns>Ecoregion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Management__c.Fee</value>
        </filters>
        <filters>
            <field>Number_Owned_Interests__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>Fee Properties for Annual Inspection</label>
        <sharedTo>
            <group>Conservation_Investments</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Great_Central_Valley</fullName>
        <columns>NAME</columns>
        <columns>Other_Identifying_Tract_Name__c</columns>
        <columns>CLS_Site__c</columns>
        <columns>CLS_Tract_Name__c</columns>
        <columns>Ecoregion__c</columns>
        <columns>TNC_Interest_Book_Value__c</columns>
        <columns>Property_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ecoregion__c</field>
            <operation>equals</operation>
            <value>CA Great Basin,CA Great Central Valley,CA Klamath,CA Sierra Nevada</value>
        </filters>
        <label>Great Central Valley</label>
    </listViews>
    <listViews>
        <fullName>Historic_Property_Interest_Groups</fullName>
        <columns>NAME</columns>
        <columns>Conservation_Area__c</columns>
        <columns>Ecoregion__c</columns>
        <columns>Property_Manager__c</columns>
        <columns>Stewardship_Lead__c</columns>
        <columns>Total_TNC_Interest_Acres__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Historic Property Interest Groups</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
</CustomObject>